# Raytracer

./: .gitignore  CMakeLists.txt  PluginReadMe.md  ReadMe.md
bootstrap/: main.cpp  main.hpp
plugins/ambient/: AmbientLight.cpp  AmbientLight.hpp
plugins/cylinders/: Cylinder.cpp  Cylinder.hpp
plugins/directional/: DirectionalLight.cpp  DirectionalLight.hpp
plugins/mesh/: Mesh.cpp  Mesh.hpp  README.md
plugins/plane/: Plane.cpp  Plane.hpp
plugins/planes/: Plane.cpp  Plane.hpp  README.md
plugins/point/: PointLight.cpp  PointLight.hpp
plugins/rectangle_shit/: Rectangle3D.cpp  Rectangle3D.hpp
plugins/sphere/: README.md  Sphere.cpp  Sphere.hpp
plugins/spheres/: README.md  Sphere.cpp  Sphere.hpp
plugins/triangle/: Triangle.cpp  Triangle.hpp
plugins/triangles/: README.md  Triangle.cpp  Triangle.hpp
project/includes/: main.hpp
project/includes/Display/: SfmlDisplay.hpp
project/includes/Display/printer/: printer.hpp
project/includes/Error/: Error.hpp  IError.hpp  Warning.hpp
project/includes/Manager/: AManager.hpp  IManager.hpp  Net.hpp
project/includes/Manager/Default/: DefaultManager.hpp
project/includes/Manager/client/: ClientManager.hpp
project/includes/Manager/default/: DefaultManager.hpp
project/includes/Manager/server/: ServerManager.hpp  ServerManagr.hpp
project/includes/Threading/: MultiThread.hpp  Renderer.hpp
project/includes/core/: Builder.hpp  Core.hpp  Ray.hpp  Tile.hpp
project/includes/core/ToFile/: ppm.hpp
project/includes/core/reader/: AReader.hpp  IReader.hpp  ObjReader.hpp
project/includes/core/reader/cfgReader/: CfgReader.hpp
project/includes/core/reader/libld/: libld.hpp
project/includes/math/: Point3D.hpp  Vector3D.hpp
project/includes/render/: Camera.hpp  Rectangle3D.hpp  Renderer.hpp
project/includes/rt/core/: Ray.hpp
project/includes/rt/math/: Point3D.hpp
project/includes/rt/render/: Camera.hpp  Rectangle3D.hpp
project/includes/security/: args.hpp
project/src/: main.cpp
project/src/Display/: SfmlDisplay.cpp
project/src/Manager/: Net.cpp
project/src/Manager/client/: clientManager.cpp
project/src/Manager/default/: defaultManager.cpp
project/src/Manager/server/: Poll.cpp  ServerManager.cpp
project/src/Threading/: MultiThreading.cpp  Renderer.cpp
project/src/core/: Builder.cpp  Core.cpp  Ray.cpp
project/src/core/Readers/: CfgReader.cpp  ObjReader.cpp
project/src/math/: Point3D.cpp  Vector3D.cpp
project/src/render/: Camera.cpp  Rectangle3D.cpp  Renderer.cpp
project/src/security/: args.cpp
shared/: SoType.hpp
shared/Error/: Error.hpp  FileNotFound.hpp  IError.hpp  Warning.hpp
shared/LIght/: ALight.hpp  ILight.hpp
shared/Object/: AObject.hpp  IObject.hpp
shared/Texture/: ATexture.hpp  ITexture.hpp
shared/math/: Point3D.hpp  Ray.hpp  Vector3D.hpp
shared/printer/: printer.hpp
